# luna

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  config.json  meson.build  plot.py  setup.sh  solar_system.json  vcpkg.json
include/: constants.hpp  ephemeris.hpp  luna_engine.hpp  sim_config.hpp  sim_state.hpp
include/cfg/: body_info.hpp  common.hpp  rand_config.hpp  sim_config.hpp
include/gfx/: camera.hpp  renderer.hpp
include/integrators/: leapfrog_openmp.hpp  leapfrog_tbb.hpp
include/physics/: ephemeris.hpp  octree.hpp
include/sim/: luna_engine.hpp  step.hpp
include/solvers/: barnes_hut_openmp.hpp  barnes_hut_tbb.hpp  direct_openmp.hpp  direct_tbb.hpp
shaders/: frag.glsl  vertex.glsl
src/: ephemeris.cpp  main.cpp  sim_config.cpp  sim_state.cpp
src/cfg/: rand_config.cpp  sim_config.cpp
src/gfx/: camera.cpp  renderer.cpp
src/integrators/: leapfrog_openmp.cpp  leapfrog_tbb.cpp
src/physics/: ephemeris.cpp  octree.cpp
src/sim/: step.cpp
src/solvers/: barnes_hut_openmp.cpp  barnes_hut_tbb.cpp  direct_openmp.cpp  direct_tbb.cpp
